Header gap fix

--- a/components/Header/style.module.scss
+++ b/components/Header/style.module.scss
@@ -36,7 +36,6 @@
         color: $gray-0;
         text-decoration: none;
         transition-duration: 0.3s;
-        padding: 0 10px;
 
         &:hover {
             color: $orange-100;
